fix: link opacity on safari

--- a/static/styles/devpool-claims/claim-table.css
+++ b/static/styles/devpool-claims/claim-table.css
@@ -229,10 +229,10 @@ table[data-claim="ok"] tbody {
 table[data-claim-rendered="true"][data-claim="none"][data-contract-loaded="true"][data-details-visible="false"] {
   border: none;
 } */
-#transferDetails\.to a {
-  opacity: 0.5;
+#transferDetails\.to a div {
+  opacity: 0.66;
 }
-#transferDetails\.to a:hover {
+#transferDetails\.to a:hover div {
   opacity: 1;
 }
 #transferDetails\.to div {
